# cmake-cookbook

./: .gitignore
chapter-04/recipe-03/c-example-3.5/: CMakeLists.txt
chapter-04/recipe-03/c-example-3.5/src/: CMakeLists.txt  main.c  sum_integers.c  sum_integers.h
chapter-04/recipe-03/c-example-3.5/test/: CMakeLists.txt  test.cpp
chapter-04/recipe-03/cxx-example-3.5-sub/: CMakeLists.txt
chapter-04/recipe-03/cxx-example-3.5-sub/src/: CMakeLists.txt
chapter-04/recipe-03/cxx-example-3.5-sub/test/: CMakeLists.txt  test.cpp
